--- a/apps/react-ui/package.json
+++ b/apps/react-ui/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "sunrise/ui": "workspace:*"
+    "sunrise/ui": "workspace:*",
+    "sunrise-utils": "workspace:*"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
