feat: 添加git-time-machine工具，优化清理脚本和依赖配置

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "private": true,
     "scripts": {
         "dev": "turbo dev",
-        "build": "pnpm run --recursive build",
-        "clean": "pnpm run --recursive clean",
+        "clean": "turbo clean",
         "lint": "pnpm run --recursive lint",
         "test": "pnpm run --recursive test",
         "docs:dev": "pnpm --filter sunrise-ui-docs dev",
@@ -13,13 +12,14 @@
         "docs:preview": "pnpm --filter sunrise-ui-docs preview"
     },
     "devDependencies": {
-        "typescript": "^5.0.0",
-        "turbo": "2.6.0",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
         "eslint": "^8.45.0",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.3"
+        "eslint-plugin-react-refresh": "^0.4.3",
+        "rimraf": "^5.0.5",
+        "turbo": "2.6.0",
+        "typescript": "^5.0.0"
     },
     "packageManager": "pnpm@10.0.0"
 }
