feat(ui): 集成 TailwindCSS 并优化组件样式
- 添加 TailwindCSS 配置文件及构建流程
- 更新 Button 和 Card 组件样式
- 修改 Input 组件类型定义和样式处理
- 更新 README 说明 TailwindCSS 集成方式
- 添加 styles.css 导出支持

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,9 +4,17 @@
     "main": "dist/index.mjs",
     "types": "dist/index.d.mts",
     "modules": "dist/index.mjs",
+    "exports": {
+        ".": {
+            "types": "./dist/index.d.mts",
+            "default": "./dist/index.mjs"
+        },
+        "./styles.css": "./dist/styles.css"
+    },
     "scripts": {
         "dev": "tsup --watch",
-        "build": "tsup",
+        "build": "tsup && pnpm run build:css",
+        "build:css": "tailwindcss -c tailwind.config.ts -i ./src/styles/tailwind.css -o ./dist/styles.css --minify",
         "clean": "rimraf dist",
         "lint": "eslint src --ext .ts,.tsx",
         "clear": " rimraf node_modules dist"
@@ -15,7 +23,10 @@
         "@types/react": "^19.1.16",
         "@types/react-dom": "^19.1.9",
         "react": "19.2.0",
-        "react-dom": "19.2.0"
+        "react-dom": "19.2.0",
+        "tailwindcss": "^3.4.14",
+        "postcss": "^8.4.47",
+        "autoprefixer": "^10.4.20"
     },
     "dependencies": {
         "rimraf": "^5.0.5",
