feat: 添加Table组件并优化utils工具函数

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -12,6 +12,11 @@
             "dom.iterable",
             "esnext"
         ],
+        "paths": {
+            "@/*": [
+                "./src/*"
+            ]
+        },
     },
     "include": [
         "./src",
