--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sunrise-utils",
-  "version": "1.0.32",
+  "version": "1.0.34",
   "description": "一个使用esbuild进行本地开发的工具库， 包含了一些常用的工具函数，主要是使用在浏览器环境",
   "main": "dist/index.mjs",
   "types": "dist/index.d.mts",
@@ -13,6 +13,7 @@
     "push": "node ./publish.js",
     "tsc": "tsc",
     "dev": "tsup --watch",
+    "build": "tsup",
     "dev:tsc": "tsc -w",
     "build:dev": "cross-env NODE_ENV=development rollup -c",
     "build:prod": "cross-env NODE_ENV=production rollup -c",
