feat(Table): 添加表格组件及相关文档
- 新增 Table 组件及其子组件
- 更新 tsup 配置以支持 tsx 文件
- 添加 Table 组件到 package.json 的导出
- 简化 tailwind.css 配置
- 完善 Table 组件的样式和功能

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,6 +22,11 @@
             "types": "./dist/Input.d.mts",
             "default": "./dist/Input.mjs"
         }
+        ,
+        "./Table": {
+            "types": "./dist/Table.d.mts",
+            "default": "./dist/Table.mjs"
+        }
     },
   "scripts": {
     "dev": "tsup --watch",
