--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,31 +21,30 @@
         "./Input": {
             "types": "./dist/Input.d.mts",
             "default": "./dist/Input.mjs"
-        }
-        ,
+        },
         "./Table": {
             "types": "./dist/Table.d.mts",
             "default": "./dist/Table.mjs"
         }
     },
-  "scripts": {
-    "dev": "tsup --watch",
-    "build": "pnpm run clean && tsup && pnpm run build:css",
-    "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ./dist/styles.css --minify",
-    "clean": "rimraf dist",
-    "lint": "eslint src --ext .ts,.tsx",
-    "clear": " rimraf node_modules dist",
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
-  },
-  "devDependencies": {
-    "@tailwindcss/cli": "^4.1.17",
-    "@tailwindcss/postcss": "^4.1.17",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "postcss": "^8.4.47",
-    "react": "19.2.0",
+    "scripts": {
+        "dev": "tsup --watch",
+        "build": "pnpm run clean && tsup && pnpm run build:css",
+        "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ./dist/styles.css",
+        "clean": "rimraf dist",
+        "lint": "eslint src --ext .ts,.tsx",
+        "clear": " rimraf node_modules dist",
+        "docs:dev": "vitepress dev docs",
+        "docs:build": "vitepress build docs",
+        "docs:preview": "vitepress preview docs"
+    },
+    "devDependencies": {
+        "@tailwindcss/cli": "^4.1.17",
+        "@tailwindcss/postcss": "^4.1.17",
+        "@types/react": "^19.1.16",
+        "@types/react-dom": "^19.1.9",
+        "postcss": "^8.4.47",
+        "react": "19.2.0",
         "react-dom": "19.2.0",
         "tailwindcss": "^4.1.17",
         "vitepress": "^1.0.0-rc.31"
@@ -53,6 +52,7 @@
     "dependencies": {
         "class-variance-authority": "^0.7.0",
         "glob": "^10.3.10",
+        "lucide-react": "^0.553.0",
         "rimraf": "^5.0.5",
         "tsup": "8.5.0",
         "typescript": "5.9.3"
