--- a/packages/typedoc-vitepress-plugin/package.json
+++ b/packages/typedoc-vitepress-plugin/package.json
@@ -2,12 +2,17 @@
   "name": "typedoc-vitepress-plugin",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "dist/index.mjs",
   "types": "dist/index.d.mts",
-  "modules": "dist/index.mjs",
+  "module": "dist/index.mjs",
   "scripts": {
     "dev": "tsup --watch",
-    "clean": " rimraf node_modules dist"
+    "build": "tsup",
+    "clean": " rimraf node_modules dist",
+    "test": "vitest",
+    "test:coverage": "vitest --coverage",
+    "test:watch": "vitest --watch"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +20,9 @@
   "devDependencies": {
     "@types/node": "^24.6.0",
     "tsup": "8.5.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^1.0.0",
+    "@vitest/coverage-v8": "^1.0.0"
   },
   "dependencies": {
     "typedoc": "^0.28.4"
